--- a/content/cgv.template.html
+++ b/content/cgv.template.html
@@ -16,7 +16,7 @@ Conditions générales de vente
 <section class="w-full p-6 mx-0 bg-gray-100 min-w-fit md">
 {% markdown %}
 
-{{ body }}
+{% call section(cgv) %}{% endcall %}
 
 {% endmarkdown %}
 </section>
